Edit index file

--- a/technology-vehicle.html
+++ b/technology-vehicle.html
@@ -17,12 +17,12 @@
 <body>
 	<header class="d-flex justify-content-between align-items-center ps-2 py-2 position-relative">
 		<div class="logo">
-			<a href="./home.html"><img class="ms-3" src="./assets/shared/logo.svg" alt="logo"></a>
+			<a href="./index.html"><img class="ms-3" src="./assets/shared/logo.svg" alt="logo"></a>
 		</div>
 		<!-- Navbar-Menu -->
 		<div class="nav d-md-block d-none px-3">
 			<ul class="navbar nav">
-				<li class="position-relative"><a href="./home.html"
+				<li class="position-relative"><a href="./index.html"
 						class="nav-link text-light fw-bolder text-uppercase"><span class="fw-bold">00 </span>Home</a>
 				</li>
 				<li class="position-relative"><a href="./destination-moon.html"
@@ -43,7 +43,7 @@
 			</div>
 			<div class="offcanvas-body">
 				<ul class="navbar nav text-start flex-column">
-					<li class="w-100"><a href="./home.html" class="nav-link text-dark fs-1 fw-bolder text-uppercase"><span
+					<li class="w-100"><a href="./index.html" class="nav-link text-dark fs-1 fw-bolder text-uppercase"><span
 								class="fw-bold">00 </span>Home</a></li>
 					<li class="w-100"><a href="./destination-moon.html"
 							class="nav-link text-dark fs-1 fw-bolder text-uppercase"><span class="fw-bold">01
